--- a/ASAR_C/ASAR_C.cbp
+++ b/ASAR_C/ASAR_C.cbp
@@ -29,15 +29,9 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++98" />
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="lectureWav.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="lectureWav.h" />
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
