test de calculs AR

--- a/ASAR_C/ASAR_C.cbp
+++ b/ASAR_C/ASAR_C.cbp
@@ -32,13 +32,13 @@
 			<Add option="-std=c++98" />
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="LEVINSON_FONCTIONNEL_OPTIMISE_WAV_test.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="lectureWav.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="lectureWav.h" />
-		<Unit filename="main.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
